# wflo

./: .env.example  .gitignore  AUTOPILOT_IMPLEMENTATION.md  CONTRIBUTING.md  COST_TRACKING_ANALYSIS.md  DATABASE_MIGRATION_GUIDE.md  DEPENDENCY_FIXES.md  DEPLOYMENT.md  GETTING_STARTED.md  Gemfile  INTEGRATION_TEST_FIX_SUMMARY.md  INTEGRATION_TEST_STATUS.md  LICENSE  Makefile  PHASE_1_IMPLEMENTATION_PLAN.md  PHASE_2_OBSERVABILITY_PLAN.md  PHASE_3_REDIS_PLAN.md  PHASE_4_KAFKA_PLAN.md  PYTHON_VERSION_FIX.md  README.md  TECHNOLOGY_AUDIT_2025.md  TESTING.md  TESTING_GUIDE.md  _config.yml  alembic.ini  docker-compose.yml  index.md  package-lock.json  pyproject.toml
.github/workflows/: deploy-docs.yml
_layouts/: default.html
assets/css/: style.css
demo/: .gitignore  DEPLOYMENT.md  README.md  package-lock.json  package.json  tailwind.config.ts
demo/app/: layout.tsx  page.tsx
demo/components/: AfterWfloDemo.tsx  BeforeWfloDemo.tsx  HITLDemo.tsx  MetricsComparison.tsx
docker/: Dockerfile.python311
docs/: ARCHITECTURE.md  BUDGET_CACHING_OPTIMIZATION.md  COMMIT_REVIEW_df9d9fe.md  COMPREHENSIVE_ASSESSMENT.md  HANDOVER.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_V2.md  INFRASTRUCTURE.md  INTEGRATION_PATTERNS_ANALYSIS.md  OPTION_A_COMPLETION_SUMMARY.md  PHASED_IMPLEMENTATION_ROADMAP.md  PHASE_1_COMPLETE.md  PHASE_1_TEST_FIXES_COMPLETE.md  PHASE_2_RESILIENCE_PATTERNS.md  PROJECT_ASSESSMENT.md  README.md  RESEARCH_SUMMARY.md  SESSION_SUMMARY.md  SUPABASE_PYTEST_FIX.md  SUPABASE_SETUP.md  SUPABASE_TESTING_STATUS.md
docs/pages/: architecture.md  contributing.md  examples.md  features.md  getting-started.md  use-cases.md
docs/phases/: PHASE_1_COST_TRACKING.md  PHASE_5_SECURITY_PLAN.md  PHASE_6_TESTING.md  README.md
examples/: README.md
examples/advanced/: multi_step_research_workflow.py
examples/anthropic_direct/: README.md  basic_claude_tool_use.py
examples/autogen_integration/: basic_conversation.py  wflo_wrapped_conversation.py
examples/autopilot_demo/: README.md  simple_demo.py
examples/crewai_integration/: README.md  basic_crew.py  wflo_wrapped_crew.py
examples/langgraph_integration/: README.md  basic_graph.py  wflo_wrapped_graph.py  wflo_wrapped_simple.py
examples/openai_direct/: README.md  basic_function_calling.py  wflo_wrapped_function_calling.py  wflo_wrapped_simple.py
examples/resilience_patterns/: README.md  circuit_breaker_protection.py  resource_contention_detection.py  retry_with_llm.py
examples/simple_llm_agent/: .env.example  QUICKSTART.md  README.md  run.py  run_mock.py  test_example.py
plan/: DEVELOPMENT_PLAN.md  MINIMUM_REQUIREMENTS.md  TECHNOLOGY_STACK.md  TODO.md
scripts/: cleanup_test_db.sh  init_db.py  run_integration_tests.sh  run_tests.sh  setup_test_db.sh  test_supabase_connection.py  verify_setup.sh
src/wflo/: __init__.py
src/wflo/autopilot/: __init__.py  budget.py  compliance.py  config.py  exceptions.py  healing.py  optimizer.py  predictor.py  runtime.py
src/wflo/autopilot/interceptors/: __init__.py  anthropic_interceptor.py  openai_interceptor.py
src/wflo/cache/: __init__.py  llm_cache.py  locks.py  redis.py
src/wflo/config/: __init__.py  settings.py
src/wflo/cost/: __init__.py  tracker.py
src/wflo/db/: __init__.py  engine.py  models.py
src/wflo/db/migrations/: env.py
src/wflo/db/migrations/versions/: 500165e12345_add_missing_foreign_keys.py  6d27a51e02d6_create_core_tables_for_workflows_.py  ec1673bcefc3_add_foreign_key_constraints.py
src/wflo/events/: __init__.py  consumer.py  producer.py  schemas.py  topics.py
src/wflo/models/: __init__.py  execution.py  state.py  workflow.py
src/wflo/observability/: __init__.py  logging.py  metrics.py  tracing.py
src/wflo/resilience/: __init__.py  circuit_breaker.py  contention.py  retry.py
src/wflo/sandbox/: __init__.py  runtime.py
src/wflo/sdk/: __init__.py  context.py  workflow.py
src/wflo/sdk/decorators/: __init__.py  checkpoint.py  track_llm.py
src/wflo/services/checkpoint/: __init__.py  service.py
src/wflo/temporal/: __init__.py  activities.py  worker.py  workflows.py
src/wflo/workflow/: __init__.py
src/wflo/workflow/steps/: __init__.py  base.py  llm.py
tests/: __init__.py  conftest.py
tests/integration/: README.md  __init__.py  test_cost_tracking.py  test_database.py  test_e2e_workflows.py  test_kafka.py  test_redis.py  test_resilience_patterns.py  test_sandbox.py  test_supabase.py  test_temporal.py
tests/unit/: test_budget_caching.py  test_checkpoint_decorator.py  test_circuit_breaker.py  test_database_engine.py  test_execution_models.py  test_llm_step.py  test_resource_contention.py  test_retry_manager.py  test_settings.py  test_track_llm_decorator.py  test_wflo_workflow.py  test_workflow_models.py
website/: .gitignore  README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
website/docs/: COMPARISON.md  VISION.md  contributing.md  examples.md  features.md  getting-started.md  intro.md  supabase-setup.md  use-cases.md
website/docs/architecture/: overview.md
website/docs/features/: overview.md
website/docs/guides/: enabling-persistence.md
website/src/css/: custom.css
website/src/pages/: index.module.css  index.tsx
